--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="./assets/favicon.ico" rel="icon">
 
-    <title>Title page</title>
+    <title> Tanguy Bouckaert</title>
 
     <link href="./main.97292821.css" rel="stylesheet">
 </head>
@@ -170,28 +170,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Consectetur adipiscing</h2>
+                    <h2 class="text-center">Geplande activiteiten</h2>
                 </div>
             </div>
             <div class="row">
+                <!--New York-->
                 <div class="col-xs-12 col-md-4">
-                    <img src="./assets/images/img-02.jpg" alt="" class="img-responsive">
-                    <h3 class="text-center">Consectetur</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor.
-                        Phasellus ut
-                        lacus tellus. In pretium lobortis blandit.</p>
+                    <img src="./assets/images/NewYork.jpg" alt="" class="img-responsive">
+                    <h3 class="text-center">New York</h3>
+                    <p>Later dit jaar ga ik op excursie naar New York om daar de cultuur op te snuiven. </p>
+                    <p>Ook ga ik daar in verband met mijn studies enkel It gerelateerde projecten bezoeken. </p>
+                    <p> Dankzij Hogent is er ook een mogelijkheid tot netwerking met lokale ondernemers en 
+                    <br> ondernemers uit belgie die werken in Amerika.</p>
                 </div>
-
+                <!--Bedrijfsbezoek-->
                 <div class="col-xs-12 col-md-4">
-                    <img src="./assets/images/img-03.jpg" alt="" class="img-responsive">
-                    <h3 class="text-center">Malesuada</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor.
-                        Phasellus ut
-                        lacus tellus. In pretium lobortis blandit.</p>
+                    <img src="./assets/images/logo-delaware.jpg" alt="" class="img-responsive">
+                    <h3 class="text-center">Bedrijfsbezoeken</h3>
+                    <p>De komende maanden zou ik graag eens een kijkje nemen bij verschillende IT-Bedrijven om <br>
+                    een duidelijk beeld te hebben over het er uit zou zie als ik later in een van deze bedrijven zou werken.</p>
                 </div>
+                <!--Les geven bij codefever-->
                 <div class="col-xs-12 col-md-4">
-                    <img src="./assets/images/img-04.jpg" alt="" class="img-responsive">
-                    <h3 class="text-center">Phasellus</h3>
+                    <br>
+                    <br>
+                    <img src="./assets/images/codefeverbeter.jpg" alt="" class="img-responsive">
+                    <br>
+                    <br>
+                    <h3 class="text-center">Les geven bij codefever</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor.
                         Phasellus ut
                         lacus tellus. In pretium lobortis blandit.</p>
@@ -207,70 +213,20 @@
                 <div class="col-xs-10 col-md-4 contact-block-container reveal">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
-                            <h3>Phone</h3>
-                            <p>+ 123 45 67 890</p>
+                            <h3>GSM</h3>
+                            <p>0470 29 75 36</p>
 
                             <h3>E-mail</h3>
-                            <p>hello@email.com</p>
+                            <p>tanguy.bouckaert@Student.Hogent.be</p>
 
                         </div>
 
-                        <div class="col-xs-12 col-sm-6">
-                            <h3>Address</h3>
-                            <p>42 rue rouelle 75015, Paris</p>
-
-                            <h3>Open hours</h3>
-                            <p>Mon - Fri : 9AM - 5PM</p>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-    <div class="section-container" id="contact-section-container">
-        <div class="container contact-form-container">
-            <div class="row">
-                <div class="col-xs-12 col-md-offset-2 col-md-8">
-                    <div class="section-container-spacer">
-                        <h2 class="text-center">Get in touch</h2>
-                    </div>
-                    <form action="">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" name="name" class="form-control" placeholder="Name">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="email" name="email" class="form-control" placeholder="Email">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <textarea class="form-control" rows="3" placeholder="Enter your message"></textarea>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox1" value="option1">Email me a copy
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" id="inlineCheckbox2" value="option2">I am a human
-                            </label>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary">Send message</button>
-                        <a href="" class="btn btn-default">Reset</a>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <script>
         document.addEventListener("DOMContentLoaded", function (event) {
@@ -313,21 +269,6 @@
 
                 </div>
 
-                <div class="col-md-4">
-
-                    <h4>Subscribe to newsletter</h4>
-
-                    <div class="form-group">
-                        <div class="input-group">
-                            <input type="text" class="form-control footer-input-text">
-                            <div class="input-group-btn">
-                                <button type="button" class="btn btn-default btn-newsletter ">OK</button>
-                            </div>
-                        </div>
-
-
-                    </div>
-                </div>
             </div>
         </div>
     </footer>
