added new page "PlayGround"

--- a/index.html
+++ b/index.html
@@ -241,8 +241,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h4>About us</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor</p>
+                    <h4>Thanks To</h4>
+                    <p>Thanks to mashup-template for providing the tools to make this website.</p>
+                    <a href="http://www.mashup-template.com/preview.html?template=factory" class="btn btn-lg">link</a>
+                    
                 </div>
 
                 <div class="col-md-4">
@@ -261,10 +263,7 @@
                         </p>
                     </div>
                     <div>
-                        <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/"
-                                    title="Create website with free html template">Mashup Template</a>/<a
-                                    href="https://www.unsplash.com/" title="Beautiful Free Images">Unsplash</a></small>
-                        </p>
+                        <p><small>© Untitled | Website gemaakt door Tanguy Bouckaert </p>
                     </div>
 
                 </div>
