--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                 <div class="col-xs-12">
                     <h1>Tanguy Bouckaert</h1>
                     <p class="">Mijn Portfolio</p>
-                    <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title="">Meer over
-                        mij</a>
+                    <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title="">Meer over mij</a>
+                    <br>
+                    <br>
+                    <a href="./Ground.html" class="btn btn-primary btn-lg anchor-link" title="">Play ground</a>
                 </div>
             </div>
         </div>
