--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title="">Meer over mij</a>
                     <br>
                     <br>
-                    <a href="./Ground.html" class="btn btn-primary btn-lg anchor-link" title="">Play ground</a>
+                    <a href="./Ground.html" class="btn btn-primary btn-lg" >Play ground</a>
                 </div>
             </div>
         </div>
