added new york page

--- a/pages/New_York.html
+++ b/pages/New_York.html
@@ -13,12 +13,12 @@
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
 
-    <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="./assets/favicon.ico" rel="icon">
+    <link href="../assets/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../assets/favicon.ico" rel="icon">
 
     <title> Tanguy Bouckaert</title>
 
-    <link href="./main.97292821.css" rel="stylesheet">
+    <link href="../main.97292821.css" rel="stylesheet">
 </head>
 
 <body>
@@ -40,11 +40,12 @@
                     <button type="button" class="close" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="./index.html#contact-section-container" title="" class="anchor-link">Contact Us</a>
+                        <li><a href="../index.html#contact-section-container" title="" class="anchor-link">Contact
+                                Us</a>
                         </li>
                         <li>
                             <p>
-                                <a href="./components.html" class="btn btn-default navbar-btn">Components</a>
+                                <a href="../components.html" class="btn btn-default navbar-btn">Components</a>
                             </p>
                         </li>
 
@@ -60,20 +61,15 @@
 
     <!-- Add your site or app content here -->
     <div class="background-image-container white-text-container"
-        style="background-image: url('./assets/images/Hackathon/Hackathon1.jpg')">
+        style="background-image: url('../assets/images/NewYorkPics/New_York_FrontPic2.jpg')">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1>Tanguy Bouckaert</h1>
-                    <p class="">Mijn Portfolio</p>
-                    <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title="">Meer over mij</a>
-                    <br>
-                    <br>
-                    <a href="./pages/PlayGround.html" class="btn btn-primary btn-lg" >Play ground</a>
-                    <br>
-                    <br>
-                    <a href="./pages/New_York.html" class="btn btn-primary btn-lg" >New York</a>
+                    <h1>New York</h1>
+                    <p class="">Internationalisering en IT</p>
+
+                    <a href="../index.html" class="btn btn-primary btn-lg">Terug naar de hoofdpagina</a>
                 </div>
             </div>
         </div>
@@ -83,61 +79,47 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Mijn Skills</h2>
+                    <h2 class="text-center">Enkele top momenten tijdens de reis</h2>
                 </div>
             </div>
             <div class="row">
-                <!-- Hier komen mijn verschillende Skills
-            Skill 1: JAVA -->
+                <!--Iets over het avond leven-->
                 <div class="col-xs-12 col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-star-o fa-3x" href="./assets/images/Java_zwartwit.png"></i>
+                        <i class="fa fa-star-o fa-3x" href="../assets/images/Java_zwartwit.png"></i>
 
                     </div>
-                    <h3 class="text-center">JAVA</h3>
-                    <p>“Software testing is a sport like hunting, it's bughunting.”
-                        <br> ― Amit Kalantri </p>
+                    <h3 class="text-center">het avond leven</h3>
+                    <p>avond leven avond leven avond leven avond leven avond leven
+                        <br> avond leven </p>
                 </div>
 
-                <!-- Skill 2: C# -->
+                <!-- Iets van overdag -->
                 <div class="col-xs-12 col-md-4">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
-                    <h3 class="text-center">C#</h3>
-                    <p>Q: Why do Java developers wear glasses? <br> <br> A: Because they don't C#</p>
+                    <h3 class="text-center">overdag</h3>
+                    <p>Iets van overdag Iets van overdag Iets van overdag Iets van overdag Iets van overdag
+                        <br> <br> Iets van overdag Iets van overdag</p>
                 </div>
 
-                <!-- Skill 3: JavaScript -->
+                <!-- Iets over het eten -->
                 <div class="col-xs-12 col-md-4">
                     <div class="fa-container">
                         <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
                     </div>
-                    <h3 class="text-center">JavaScript</h3>
-                    <p> Javascript is the duct tape of the Internet.
-                        <br> -Charlie Campbell</p>
+                    <h3 class="text-center">het eten</h3>
+                    <p> het eten het eten het eten het eten het eten het eten het eten
+                        <br> het eten</p>
                 </div>
 
             </div>
 
-            <!-- vuile opmaak moet nog opgemaakt worden -->
-
-            <div class="row">
-                <br><br><br>
-            </div>
 
 
-            <div class="row">
-                <!-- Skill 4: Css -->
-                <div class="col-xs-12 col-md-4">
-                    <div class="fa-container">
-                        <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <h3 class="text-center">Css</h3>
-                    <p> Whitout css the world would only be black and white</p>
-                </div>
 
-            </div>
+
         </div>
     </div>
 
@@ -145,24 +127,19 @@
     <!--Hier schrijf ik een stukje over hackathons kan je later nog veranderen-->
     <div class="section-container section-half-background-image-container">
         <!--Dit is de foto -->
-        <div class="image-column" style="background-image: url('./assets/images/Hackathon/Hackathon2.jpg')"></div>
+        <div class="image-column" style="background-image: url('../assets/images/NewYorkPics/EmpireState.jpg')"></div>
         <div class="container">
             <div class="row">
                 <div class="section-label reveal">
-                    <p>Teambuilding</p>
+                    <p>N <br> Y <br> C</p>
                 </div>
                 <div class="col-md-6 col-md-offset-6 text-column">
-                    <h2>Hackathons</h2>
-                    <h3>Wat is een Hackathon</h3>
-                    <p>In tegenstelling tot wat u misschien zou verwachten heeft een hackathon per definitie niets
-                         te maken met “echt” hacken. Hoewel de meeste hackathons inderdaad afgebeeld worden als jongeren 
-                         met een laptop op schoot, gaat een hackathon niet om het inbreken op andere systemen.  </p>
-                    <p>Wel heeft
-                        een hackathon iets te maken met de originele betekenis van het word hacken: “Een concept gebruiken 
-                        op de manier waarop het origineel niet bedoeld is”.</p>
-                    <p>Praktisch betekent dit dat tijdens een 
-                        hackathon gezocht wordt naar nieuwe manieren om bestaande oplossingen in te zetten. Hoewel het 
-                        niet per se nodig is, doen aan een hackathon vaak uitsluitend jonge mensen mee.</p>
+                    <h2>ManHatton</h2>
+                    <h3>Kleine Sammenvatting van New York(zeker datacamp vermelden!!!)</h3>
+                    <p>Data Camp Data Camp Data Camp Data Camp Data Camp Data Camp Data Camp Data Camp
+                        Data Camp Data Camp Data Camp Data Camp Data Camp Data Camp Data Camp Data Camp
+                    </p>
+
 
                 </div>
             </div>
@@ -170,39 +147,46 @@
     </div>
 
 
-<!--Geplande activiteiten-->
+    <!--Geplande activiteiten-->
     <div class="section-container">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Geplande activiteiten</h2>
+                    <h2 class="text-center">Bezochte bedrijven</h2>
+                    <!--Hier gestopt later verderwerken-->
                 </div>
             </div>
             <div class="row">
-                <!--New York-->
+                <!--FIT-->
                 <div class="col-xs-12 col-md-4">
-                    <img src="../assets/images/NewYorkPics/NewYork.jpg" alt="" class="img-responsive">
-                    <h3 class="text-center">New York</h3>
-                    <p>Later dit jaar ga ik op excursie naar New York om daar de cultuur op te snuiven. </p>
-                    <p>Ook ga ik daar in verband met mijn studies enkel It gerelateerde projecten bezoeken. </p>
-                    <p> Dankzij Hogent is er ook een mogelijkheid tot netwerking met lokale ondernemers en 
-                    <br> ondernemers uit belgie die werken in Amerika.</p>
+                    <br>
+                    <br>
+                    <a href="https://www.flandersinvestmentandtrade.com">
+                        <img src="../assets/images/NewYorkPics/FIT.jpg" alt="" class="img-responsive">
+                    </a>
+                    <br>
+                    <br>
+                    <h3 class="text-center">Flanders Investment & Trade</h3>
+                    <p>Flanders Investment & Trade is een externe verzelfstandigd agentschap die ondernemingen helpen om naar de United States
+                        uit te breiden. Soms helpen ze ook ondernemingen die vanuit de United States naar Vlaanderen willen uitbreiden.
+                    </p>
+
                 </div>
-                <!--Bedrijfsbezoek-->
+                <!--BelCham-->
                 <div class="col-xs-12 col-md-4">
-                    <img src="./assets/images/logo-delaware.jpg" alt="" class="img-responsive">
-                    <h3 class="text-center">Bedrijfsbezoeken</h3>
-                    <p>De komende maanden zou ik graag eens een kijkje nemen bij verschillende IT-Bedrijven om <br>
-                    een duidelijk beeld te hebben over het er uit zou zie als ik later in een van deze bedrijven zou werken.</p>
+                    <a href="https://www.belcham.org/">
+                        <img src="../assets/images/NewYorkPics/belcham.png" alt="" class="img-responsive">
+                    </a>
+                    <h3 class="text-center">Belgium chamber of commerce</h3>
+                    <p></p>
                 </div>
-                <!--Les geven bij codefever-->
+                <!--DataCamp-->
                 <div class="col-xs-12 col-md-4">
+                    <a href="https://www.datacamp.com/">
+                    <img src="../assets/images/NewYorkPics/datacamp.png" alt="" class="img-responsive">
+                </a>
                     <br>
-                    <br>
-                    <img src="./assets/images/codefeverbeter.jpg" alt="" class="img-responsive">
-                    <br>
-                    <br>
-                    <h3 class="text-center">Les geven bij codefever</h3>
+                    <h3 class="text-center">DataCamp</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor.
                         Phasellus ut
                         lacus tellus. In pretium lobortis blandit.</p>
@@ -226,7 +210,7 @@
 
                         </div>
 
-                        
+
                     </div>
                 </div>
             </div>
@@ -249,7 +233,7 @@
                     <h4>Thanks To</h4>
                     <p>Thanks to mashup-template for providing the tools to make this website.</p>
                     <a href="http://www.mashup-template.com/preview.html?template=factory" class="btn btn-lg">link</a>
-                    
+
                 </div>
 
                 <div class="col-md-4">
@@ -284,4 +268,4 @@
     </script>
 
 
-    <script type="text/javascript" src="./main.faaf51f9.js"></script>
+    <script type="text/javascript" src="../main.faaf51f9.js"></script>
