finished New York Page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <button type="button" class="close" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="./index.html#contact-section-container" title="" class="anchor-link">Contact Us</a>
+                        <li>
+                            <a href="./index.html#contact-section-container" title="" class="anchor-link">Contact Us</a>
                         </li>
                         <li>
                             <p>
@@ -181,7 +182,7 @@
             <div class="row">
                 <!--New York-->
                 <div class="col-xs-12 col-md-4">
-                    <img src="../assets/images/NewYorkPics/NewYork.jpg" alt="" class="img-responsive">
+                    <img src="./assets/images/NewYorkPics/NewYork.jpg" alt="" class="img-responsive">
                     <h3 class="text-center">New York</h3>
                     <p>Later dit jaar ga ik op excursie naar New York om daar de cultuur op te snuiven. </p>
                     <p>Ook ga ik daar in verband met mijn studies enkel It gerelateerde projecten bezoeken. </p>
