--- a/pages/PlayGround.html
+++ b/pages/PlayGround.html
@@ -58,7 +58,7 @@
                     <h1>The PlayGround</h1>
                     <p class="">This is where i play with things i have learned ressantly</p>
                     
-                    <a href="../index.html" class="btn btn-primary btn-lg" >Back to my home page</a>
+                    <a href="../index.html" class="btn btn-succes.focus btn-lg" >Back to my home page</a>
                 </div>
             </div>
         </div>
