Verbetering met mama

--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
                 </div>
                 <div class="col-md-6 col-md-offset-6 text-column">
                     <h2>Hackathons</h2>
-                    <h3>Wat is een Hackathon</h3>
-                    <p>In tegenstelling tot wat u misschien zou verwachten heeft een hackathon per definitie niets
+                    <h3>Wat is een hackathon?</h3>
+                    <p>In tegenstelling tot wat u misschien zou verwachten, heeft een hackathon per definitie niets
                          te maken met “echt” hacken. Hoewel de meeste hackathons inderdaad afgebeeld worden als jongeren 
                          met een laptop op schoot, gaat een hackathon niet om het inbreken op andere systemen.  </p>
                     <p>Wel heeft
-                        een hackathon iets te maken met de originele betekenis van het word hacken: “Een concept gebruiken 
-                        op de manier waarop het origineel niet bedoeld is”.</p>
-                    <p>Praktisch betekent dit dat tijdens een 
+                        een hackathon iets te maken met de originele betekenis van het woord hacken: “Een concept gebruiken 
+                        op de manier waarvoor het oorspronkelijk niet bedoeld is”.</p>
+                    <p>Praktisch gezien betekent dit dat tijdens een 
                         hackathon gezocht wordt naar nieuwe manieren om bestaande oplossingen in te zetten. Hoewel het 
                         niet per se nodig is, doen aan een hackathon vaak uitsluitend jonge mensen mee.</p>
 
@@ -185,16 +185,16 @@
                     <img src="./assets/images/NewYorkPics/NewYork.jpg" alt="" class="img-responsive">
                     <h3 class="text-center">New York</h3>
                     <p>Later dit jaar ga ik op excursie naar New York om daar de cultuur op te snuiven. </p>
-                    <p>Ook ga ik daar in verband met mijn studies enkel It gerelateerde projecten bezoeken. </p>
+                    <p>Ook ga ik daar in verband met mijn studies enkel IT gerelateerde projecten bezoeken. </p>
                     <p> Dankzij Hogent is er ook een mogelijkheid tot netwerking met lokale ondernemers en 
-                    <br> ondernemers uit belgie die werken in Amerika.</p>
+                    <br> ondernemers uit België die werken in Amerika.</p>
                 </div>
                 <!--Bedrijfsbezoek-->
                 <div class="col-xs-12 col-md-4">
                     <img src="./assets/images/logo-delaware.jpg" alt="" class="img-responsive">
                     <h3 class="text-center">Bedrijfsbezoeken</h3>
-                    <p>De komende maanden zou ik graag eens een kijkje nemen bij verschillende IT-Bedrijven om <br>
-                    een duidelijk beeld te hebben over het er uit zou zie als ik later in een van deze bedrijven zou werken.</p>
+                    <p>De komende maanden zou ik graag eens een kijkje nemen bij verschillende IT-bedrijven om <br>
+                    een duidelijk beeld te hebben over hoe het er uit zou zie als ik later in een van deze bedrijven zou werken.</p>
                 </div>
                 <!--Les geven bij codefever-->
                 <div class="col-xs-12 col-md-4">
