--- a/pages/New_York.html
+++ b/pages/New_York.html
@@ -136,10 +136,10 @@
                     
                     <p>New York was zeker een van mijn bucketlist items die ik wou afvinken,
                         en door HoGent heb ik dit kunnen doen. Vooral het bezoek aan DataCamp zal me
-                        lang bijblijven. Het was een leerrijk moment waar we een kijkje konden nemen
-                        naar hoe een IT bedrijf in elkaar zit. <br><br> Wat het hele bezoek zo speciaal maakte
-                        was dat de ceo en oprichter van DataCamp een belg was en in belgië heeft gestudeerd
-                        , ook waren er enkel andere werknemers die in belgië hebben gestudeerd.
+                        lang bij blijven. Het was een leerrijk moment waar we een kijkje konden nemen
+                         hoe een IT bedrijf in elkaar zit. <br><br> Wat het hele bezoek zo speciaal maakte
+                        was dat de ceo en oprichter van DataCamp een Belg was en in België heeft gestudeerd.
+                        Er waren ook enkele andere werknemers die in België hebben gestudeerd.
                     </p>
 
 
@@ -163,8 +163,8 @@
 
                     </div>
                     <h3 class="text-center">Het avond leven</h3>
-                    <p>New York is een stad die nooit stil staat, zelf s'avonds zijn er nog mensen aan
-                        het werken. Iets wat in belgië ondenkbaar is.
+                    <p>New York is een stad die nooit stil staat, zelf 's avonds zijn er nog mensen aan
+                        het werken. Iets wat in België ondenkbaar is.
                     </p>
                 </div>
 
@@ -174,10 +174,10 @@
                         <i class="fa fa-sun-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <h3 class="text-center">Overdag</h3>
-                    <p>Overdag hoor je vaak auto's tuten en zie je mensen druk over en weer lopen.
-                        Opzich is er hier niet veel verschil met een normale werkdag in belgië,
-                        buiten dat mensen hier veel sneller leven. <br><br> Als je even wil stil staan om een
-                        foto te trekken worden mensen al ambetant. Wat wet te verstaan is.</p>
+                    <p>Overdag hoor je vaak auto's claxonneren en zie je mensen druk over en weer lopen.
+                        Op zich is er hier niet veel verschil met een normale werkdag in België,
+                        buiten het feit dat mensen hier veel sneller leven. <br><br> Als je even wil stil staan om een
+                        foto te trekken, worden mensen al lastig. </p>
                 </div>
 
                 <!-- Iets over het eten -->
@@ -188,7 +188,7 @@
                     <h3 class="text-center">Het eten</h3>
                     <p>Mensen hebben hier vaak niet veel tijd om te eten waardoor ze genoodzaakt zijn om snel
                         naar een fast food te gaan om iets te eten. Ook kan het zijn dat bedrijven fast food bestellen
-                        om nog minder tijd te verspillen aan eten.
+                        om nog minder tijd te verspillen metS eten.
                     </p>
                 </div>
 
