added loginscreen to portfolio

--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Geplande activiteiten</h2>
+                    <h2 class="text-center">Geplande & afgelopen activiteiten</h2>
                 </div>
             </div>
             <div class="row">
                 <!--New York-->
                 <div class="col-xs-12 col-md-4">
-                    <img src="./assets/images/NewYorkPics/NewYork.jpg" alt="" class="img-responsive">
+                    <a href="./pages/New_York.html">
+                        <img src="./assets/images/NewYorkPics/NewYork.jpg" alt="" class="img-responsive" >
+                    </a>
                     <h3 class="text-center">New York</h3>
-                    <p>Later dit jaar ga ik op excursie naar New York om daar de cultuur op te snuiven. </p>
-                    <p>Ook ga ik daar in verband met mijn studies enkel IT gerelateerde projecten bezoeken. </p>
-                    <p> Dankzij Hogent is er ook een mogelijkheid tot netwerking met lokale ondernemers en 
-                    <br> ondernemers uit België die werken in Amerika.</p>
+                    <p>Op 31 januari 2020 ben ik dankzij Hogent naar New York kunnen gaan. 
+                    <br>Click op de foto om meer over mijn ervaring te weten.</p>
                 </div>
                 <!--Bedrijfsbezoek-->
                 <div class="col-xs-12 col-md-4">
@@ -200,13 +200,13 @@
                 <div class="col-xs-12 col-md-4">
                     <br>
                     <br>
-                    <img src="./assets/images/codefeverbeter.jpg" alt="" class="img-responsive">
+                    <a href="https://www.codefever.be/nl">
+                        <img src="./assets/images/codefeverbeter.jpg" alt="" class="img-responsive">
+                    </a>
                     <br>
                     <br>
                     <h3 class="text-center">Les geven bij codefever</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor.
-                        Phasellus ut
-                        lacus tellus. In pretium lobortis blandit.</p>
+                    <p>Ik geef als assistent programmeerles aan kinderen van 8 tot 15 jaar. </p>
                 </div>
             </div>
         </div>
