--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title="">Meer over mij</a>
                     <br>
                     <br>
-                    <a href="./pages/PlayGround.html" class="btn btn-primary btn-lg" >Play ground</a>
+                    <a href="./pages/Login_Form.html" class="btn btn-primary btn-lg" >Play ground</a>
                     <br>
                     <br>
                     <a href="./pages/New_York.html" class="btn btn-primary btn-lg" >New York</a>
