lay out verbeterd

--- a/pages/Login_Form.html
+++ b/pages/Login_Form.html
@@ -16,7 +16,8 @@
 
     <title> Tanguy Bouckaert</title>
 
-    <link href="./main.97292821.css" rel="stylesheet">
+	<link href="./main.97292821.css" rel="stylesheet">
+	<link href="../assets/javascript/Login.js">
 
 	<title>Login Page</title>
 </head>
@@ -51,19 +52,7 @@
 
 		</table>
 	</form>
-	<script language="javascript">
-		function check(form) {
-
-			if (form.userid.value == "Tanguy" && form.pwd.value == "Tanguy") {
-
-				return true;
-			} else {
-				alert("Error Password or Username")
-				return false;
-			}
-		}
-	</script>
-
+	
 </body>
 
 </html>
