--- a/index.html
+++ b/index.html
@@ -40,15 +40,18 @@
                     <button type="button" class="close" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="./index.html#contact-section-container" title="" class="anchor-link">Contact Us</a>
+                        <li style="margin-right: 1em;">
+                            <a href="./index.html#contact_me" title="" class="anchor-link">Contact Me</a>
                         </li>
-                        <li>
-                            <p>
-                                <a href="./components.html" class="btn btn-default navbar-btn">Components</a>
-                            </p>
+                        <li style="margin-right: 1em;">
+                            <a href="#Mijn_Skills" title="" class="btn btn-lg anchor-link">Meer over mij</a>
                         </li>
-
+                        <li style="margin-right: 1em;">
+                            <a href="./pages/Login_Form.html" class="btn btn-lg" >Play ground</a>
+                        </li>
+                        <li style="margin-right: 1em;">
+                            <a href="./pages/New_York.html" class="btn btn-lg" >New York</a>
+                        </li>
 
                     </ul>
 
@@ -68,19 +71,13 @@
                 <div class="col-xs-12">
                     <h1>Tanguy Bouckaert</h1>
                     <p class="">Mijn Portfolio</p>
-                    <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title="">Meer over mij</a>
-                    <br>
-                    <br>
-                    <a href="./pages/Login_Form.html" class="btn btn-primary btn-lg" >Play ground</a>
-                    <br>
-                    <br>
-                    <a href="./pages/New_York.html" class="btn btn-primary btn-lg" >New York</a>
+                    
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="section-container">
+    <div class="section-container" id="Mijn_Skills">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
@@ -218,7 +215,7 @@
                 <div id="map"></div>
                 <div class="col-xs-10 col-md-4 contact-block-container reveal">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                        <div class="col-xs-12 col-sm-6" id="contact_me">
                             <h3>GSM</h3>
                             <p>0470 29 75 36</p>
 
