Dusting off the project and adding some new skills.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
                         <li style="margin-right: 1em;">
                             <a href="#Mijn_Skills" title="" class="btn btn-lg anchor-link">Meer over mij</a>
                         </li>
-                        <li style="margin-right: 1em;">
+                        <!-- <li style="margin-right: 1em;">
                             <a href="./pages/Login_Form.html" class="btn btn-lg" >Play ground</a>
-                        </li>
+                        </li> -->
+
                         <li style="margin-right: 1em;">
-                            <a href="./pages/New_York.html" class="btn btn-lg" >New York</a>
+                            <a href="./pages/StudentCareer.html" class="btn btn-lg" >Student Carriere</a>
                         </li>
 
                     </ul>
@@ -64,13 +65,13 @@
 
     <!-- Add your site or app content here -->
     <div class="background-image-container white-text-container"
-        style="background-image: url('./assets/images/Hackathon/Hackathon1.jpg')">
+        style="background-image: url('./assets/images/DAE/GameArt.jpg')">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h1>Tanguy Bouckaert</h1>
-                    <p class="">Mijn Portfolio</p>
+                    <h1 id="black">Tanguy Bouckaert</h1>
+                    <p class="">Web Dev & Game Designer</p>z
                     
                 </div>
             </div>
@@ -85,12 +86,43 @@
                 </div>
             </div>
             <div class="row">
-                <!-- Hier komen mijn verschillende Skills
-            Skill 1: JAVA -->
+                <!-- Hier komen mijn verschillende Skills -->
+
+                <!--Skill 1: Unity -->
                 <div class="col-xs-12 col-md-4">
                     <div class="fa-container">
-                        <i class="fa fa-star-o fa-3x" href="./assets/images/Java_zwartwit.png"></i>
+                        <i class="fa fa-star-o fa-3x"></i>
+                    </div>
+                    <h3 class="text-center">Unity</h3>
+                    <p>“Unity is far more superior to UE.”
+                        <br> ― Some Guy on Reddit</p>
+                </div>
 
+                <!--Skill 1: Blender -->
+                <div class="col-xs-12 col-md-4">
+                    <div class="fa-container">
+                        <i class="fa fa-star-o fa-3x"></i>
+                    </div>
+                    <h3 class="text-center">Blender</h3>
+                    <p>“It all starts with a cube!”
+                        <br> ― Some Guy on the internet</p>
+                </div>
+
+                <!--Skill 1: PhotoShop -->
+                <div class="col-xs-12 col-md-4">
+                    <div class="fa-container">
+                        <i class="fa fa-star-o fa-3x"></i>
+                    </div>
+                    <h3 class="text-center">PhotoShop</h3>
+                    <p>“The grass is always greener when you crank up the saturation.”</p>
+                        <br>
+                        <a href="https://www.instagram.com/p/rXK4g_vvpc/?epik=dj0yJnU9azNnVm1iWExHWnVlRDg0NkNOUnVZQ0h5SEdWS2JuM1UmcD0wJm49MGFtRnd4LXRyaUhlV3BRNm1XUGVrZyZ0PUFBQUFBR1lfUUYw">donna_shoots</a>
+                </div>
+
+                <!--Skill 1: JAVA -->
+                <div class="col-xs-12 col-md-4">
+                    <div class="fa-container">
+                        <i class="fa fa-star-o fa-3x"></i>
                     </div>
                     <h3 class="text-center">JAVA</h3>
                     <p>“Software testing is a sport like hunting, it's bughunting.”
@@ -133,6 +165,17 @@
                     </div>
                     <h3 class="text-center">Css</h3>
                     <p> Whitout css the world would only be black and white</p>
+                </div>
+
+                <!-- Skill 3: TypeScript -->
+                <div class="col-xs-12 col-md-4">
+                    <div class="fa-container">
+                        <i class="fa fa-star-o fa-3x" aria-hidden="true"></i>
+                    </div>
+                    <h3 class="text-center">TypeScript</h3>
+                    <p> TypeScript is generaly used to make web applications. </p>
+                    <a href="https://www.typescriptlang.org/">What is TypeScript?</a>
+                        
                 </div>
 
             </div>
