Small Path Errors + WIP Page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!-- Project In Search Of Light -->
                 <div class="col-xs-12 col-md-4">
                     <a href="./pages/Empty.html"> <!-- Leeds to the devlog -->
-                        <img src="./assets/images/games/Unity.png" alt="" class="project-img">
+                        <img src="./assets/images/Games/Unity.png" class="project-img">
                     </a>
                     <h3 class="text-center">[Niet gepupliceerde] <br> Plane Game </h3>
                     <p>Dit is het tweede project waar ik aan gewerkt heb.</p>
@@ -128,7 +128,7 @@
                 <!-- Project In Search Of Light -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/in-search-of-light" target="_blank"q>
-                        <img src="./assets/images/games/In Search Of Light.png" alt="" class="img-responsive">
+                        <img src="./assets/images/Games/In Search Of Light.png" alt="" class="img-responsive">
                     </a>
                     <h3 class="text-center">In Search Of Light</h3>
                     <p>Dit is het tweede project waar ik aan gewerkt heb.</p>
