--- a/pages/Empty.html
+++ b/pages/Empty.html
@@ -1,3 +1,33 @@
+<html>
 
-<img src="../assets/images/WIP.jpg" />
-<h1 class="text-center" > Page is work in progress </h1>
+<head>
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
+    <meta content="description" name="description">
+    <meta name="google" content="notranslate" />
+    <meta content="Mashup templates have been developped by Orson.io team" name="author">
+
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
+
+    <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="./assets/favicon.ico" rel="icon">
+
+    <title> Tanguy Bouckaert</title>
+
+    <link href="../main.97292821.css" rel="stylesheet">
+</head>
+
+<body>
+    <div style="padding: 20% 50% 50% 35%;">
+
+        <!-- <h1 id="black" class="text"> Page is work in progress </h1> -->
+        <img src="../assets/images/WIP.jpg" />
+        
+    </div>
+    
+
+</body>
+
+</html>
