Removed some files

--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
         <div class="container">
             <div class="row blue">
                 <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Huidige Projecten</h2>
+                    <h2 class="text-center">Projecten</h2>
                 </div>
             </div>
             <div class="row">
                 <!-- GB Jam -->
                 <div class="col-xs-12 col-md-4">
-                    <a href="./pages/Empty.html"> <!-- Leeds to the devlog -->
+                    <a href="https://tanguy-bouckaert.itch.io/into-the-depths" target="_blank"> <!-- Leeds to the devlog -->
                         <img src="./assets/images/Games/GB Studio.png" class="project-img">
                     </a>
-                    <h3 class="text-center">[Niet gepupliceerde] <br> GameBoy Game</h3>
-                    <p>Dit is het eerste project waar ik aan gewerkt heb.</p>
+                    <h3 class="text-center">Into The Depths</h3>
+                    <p> Ik wou altijd al een gameboy game maken. Door de GB Jam heb ik een mogelijkheid gekregen om deze droom waar te maken. </p> 
                 </div>
 
                 <!-- Project In Search Of Light -->
@@ -100,22 +100,6 @@
                     <p>Dit is het tweede project waar ik aan gewerkt heb.</p>
                 </div>
 
-                
-
-            </div>
-        </div>
-    </div>
-
-    <!-- Recente projecten -->
-    <div class="section-container">
-        <div class="container">
-            <div class="row blue">
-                <div class="col-xs-12 col-md-12 section-container-spacer">
-                    <h2 class="text-center">Recente Projecten</h2>
-                    <h4 class="text-center">Click op de foto om naar de projecten te gaan!</h4>
-                </div>
-            </div>
-            <div class="row">
                 <!-- Project HighFive -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/five-a-space-adventure" target="_blank">
@@ -134,11 +118,10 @@
                     <p>Dit is het tweede project waar ik aan gewerkt heb.</p>
                 </div>
 
-                
-
             </div>
         </div>
     </div>
+
 
 
     <div class="section-container" id="Mijn_Skills">
