Added one gif Waaauw

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h1 id="black">Tanguy Bouckaert</h1>
-                    <p class="">Web Dev & Game Designer</p>z
+                    <p class="">Web Dev & Game Designer</p>
 
                 </div>
             </div>
@@ -85,7 +85,7 @@
                 <!-- GB Jam -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/into-the-depths" target="_blank"> <!-- Leeds to the devlog -->
-                        <img src="./assets/images/Games/GB Studio.png" class="project-img">
+                        <img src="./assets/images/Games/IntoTheDepths.jpg" class="project-img" onmouseover="this.src='./assets/gifs/IntoTheDepths.gif'" onmouseleave="this.src='./assets/images/Games/IntoTheDepths.jpg'">
                     </a>
                     <h3 class="text-center">Into The Depths</h3>
                     <p> Ik wou altijd al een gameboy game maken. Door de GB Jam heb ik een mogelijkheid gekregen om deze droom waar te maken. </p> 
