--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <!-- Project HighFive -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/five-a-space-adventure" target="_blank">
-                        <img src="./assets/images/Games/HighFiveSpaceGame.png" alt="" class="img-responsive">
+                        <img src="./assets/images/Games/HighFiveSpaceGame.png" alt="" class="img-responsive" onmouseover="this.src='./assets/gifs/FiveSpaceAdventure.gif'" onmouseleave="this.src='./assets/images/Games/HighFiveSpaceGame.png'">
                     </a>
                     <h3 class="text-center">Five: Space Adventure</h3>
                     <p>Dit is het eerste project waar ik aan gewerkt heb.</p>
@@ -112,7 +112,7 @@
                 <!-- Project In Search Of Light -->
                 <div class="col-xs-12 col-md-4">
                     <a href="https://tanguy-bouckaert.itch.io/in-search-of-light" target="_blank"q>
-                        <img src="./assets/images/Games/In Search Of Light.png" alt="" class="img-responsive">
+                        <img src="./assets/images/Games/InSearchOfLight.png" alt="" class="img-responsive" onmouseover="this.src='./assets/gifs/InSearchOfLight.gif'" onmouseleave="this.src='./assets/images/Games/InSearchOfLight.png'">
                     </a>
                     <h3 class="text-center">In Search Of Light</h3>
                     <p>Dit is het tweede project waar ik aan gewerkt heb.</p>
